<resources>
    <string name="app_name">Woman\'s Health</string>
    <string name="on_boot_denied">Permission denied. Your reminders will be lost after rebooting.</string>
    <string name="welcome_header">Welcome to Woman\'sHealth</string>
    <string name="about_yourself">tell us about yourself...</string>
    <string name="date_of_birth">Your date of birth:</string>
    <string name="pregnant">I\'m pregnant</string>
    <string name="menopause">I\'m in menopause</string>
    <string name="normal">None of the above</string>
    <string name="want_password">To protect your data with a password, go to Profile</string>
    <string name="go_to_settings">Go now</string>
    <string name="begin">Let\'s begin</string>
    <string name="empty_date_of_birth">Date of birth can\'t be empty</string>
    <string name="enter_password">Enter password</string>
    <string name="incorrect_password">Incorrect password, try again</string>
    <string name="access_denied">Access denied</string>
    <string name="medical_appointments">Medical Appointments</string>
    <string name="weight_and_bmi">Weight/BMI</string>
    <string name="menstrual_period">Menstrual Period</string>
    <string name="medications">Medications</string>
    <string name="profile">Profile</string>
    <string name="date">Date:</string>
    <string name="height">Height:</string>
    <string name="height_units">cm</string>
    <string name="weight">Weight:</string>
    <string name="weight_units">kg</string>
    <string name="calculate">Calculate</string>
    <string name="recalculate">Re-Calculate</string>
    <string name="empty_height">The value of Height must be integer between 100 and 300 cm</string>
    <string name="empty_weight">The value of Weight must be between 20 and 200 kg</string>
    <string name="result">Result</string>
    <string name="bmi">BMI</string>
    <string name="category">Category</string>
    <string name="normal_weight">Normal Weight</string>
    <string name="underweight">Underweight</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="optimum_result">Optimum Result</string>
    <string name="underweight_result">Gain</string>
    <string name="normal_result">Need not loss or gain weight</string>
    <string name="overweight_result">Lose</string>
    <string name="record_exists">A value already exists for the date. Would you like to update it?</string>
    <string name="update">Update</string>
    <string name="last_period">Last Menstrual Period</string>
    <string name="set_duration">Set duration</string>
    <string name="duration">Duration: </string>
    <string name="next_period">Next Menstrual Period</string>
    <string name="expected_date">Expected Date</string>
    <string name="days_to_go">Days to go</string>
    <string name="interval">Interval: </string>
    <string-array name="medications_array">
        <item>Medicine 1</item>
        <item>Medicine 2</item>
        <item>Medicine 3</item>
        <item>Medicine 4</item>
        <item>Medicine 5</item>
        <item>Medicine 6</item>
        <item>Medicine 7</item>
        <item>Medicine 8</item>
        <item>Medicine 9</item>
        <item>Medicine 10</item>
        <item>Medicine 11</item>
        <item>Medicine 12</item>
        <item>Medicine Alergy 1</item>
        <item>Medicine Alergy 2</item>
        <item>Medicine Alergy 3</item>
        <item>Medicine Alergy 4</item>
        <item>Medicine Alergy 5</item>
    </string-array>
    <string name="name">Name</string>
    <string name="details">details</string>
    <string name="dosage">Dosage</string>
    <string name="number">Number</string>
    <string name="how_taken">How is it taken</string>
    <string name="how_often">How often do you need to take it</string>
    <string name="commencement_date">Date of commencement</string>
    <string name="medication_time">Medication time</string>
    <string name="set_time1">Set time 1</string>
    <string name="set_time2">Set time 2</string>
    <string name="set_time3">Set time 3</string>
    <string name="set_time4">Set time 4</string>
    <string name="set_time5">Set time 5</string>
    <string name="set_time6">Set time 6</string>
    <string name="set_time7">Set time 7</string>
    <string name="set_time8">Set time 8</string>
    <string name="set_time9">Set time 9</string>
    <string name="set_time10">Set time 10</string>
    <string name="set_time11">Set time 11</string>
    <string name="set_time12">Set time 12</string>
    <string name="how_long">How long do you need to take it</string>
    <string name="allergy_to">Allergy to:</string>
    <string name="allergies_effects">Type of allergies or side-effects:</string>
    <string-array name="how_taken_array">
        <item>Orally (by mouth)</item>
        <item>Injections</item>
        <item>Applied locally</item>
        <item>Eye drops</item>
        <item>Ear drops</item>
        <item>Other e.g. patches, suppositories</item>
        <item>How is it taken</item> 
    </string-array>
    <string-array name="how_often_array">
        <item>a day</item>
        <item>a week</item>
        <item>a month</item>
        <item>a year</item>
    </string-array>
    <string name="once">Once a</string>
    <string name="twice">Twice a</string>
    <string name="thrice">Thrice a</string>
    <string name="times">times a</string>
    <string name="record">Record</string>
    <string name="save">Save</string>
    <string name="reminder">Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="permission_denied">Permission denied</string>
    <string name="add_appointment">Add appointment</string>
    <string name="add_medication">Add medication</string>
    <string name="add_allergy">Add allergy</string>
    <string name="empty_name_toast_message">Name can\'t be empty</string>
    <string name="empty_appointment_date_toast_message">Appointment date can\'t be empty</string>
    <string name="type">Type</string>
    <string name="appointment_name">Appointment name</string>
    <string name="who_is_your_doctor">Who is your doctor?</string>
    <string name="doctors_name">Doctor\'s name</string>
    <string name="address">Address</string>
    <string name="telephone_number">Telephone number</string>
    <string name="email">Email</string>
    <string name="last_date">Last date</string>
    <string name="select_date">Select date</string>
    <string name="next_date">Next date</string>
    <string name="from_last_date">from last date</string>
    <string name="last_date_not_selected">Last date not selected</string>
    <string name="or">--- or ---</string>
    <string name="select_exact_date">Select exact date</string>
    <string name="select_exact_time">Select exact time</string>
    <string name="on_day">on</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="new_password">Enter new password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="incorrect_password_confirmation">Confirmation doesn\'t match password</string>
    <string-array name="next_appointment_date_array">
        <item>Off</item>
        <item>One week</item>
        <item>One month</item>
        <item>Three months</item>
        <item>Six months</item>
        <item>One year</item>
        <item>Two years</item>
        <item>Three years</item>
    </string-array>
    <string-array name="duration_array">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>7 days</item>
        <item>Set duration</item> 
    </string-array>
    <string-array name="frequency_array">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>
    <string-array name="length_array">
        <item>days</item>
        <item>weeks</item>
        <item>months</item>
        <item>years</item>
    </string-array>
    <string name="delete_appointment_message">Delete appointment?</string>
    <string name="delete_medication_message">Delete medication?</string>
    <string name="delete_allergen_message">Delete allergen?</string>
    <string name="delete_record">Delete record?</string>
    <string name="record_added">The record is added into database</string>
    <string name="list">List</string>
    <string name="chart">Chart</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="appointment_tomorrow">Your appointment: %s is tomorrow</string>
    <string name="appointment_today">Your appointment: %s is in one hour</string>
    <string name="take_medicine">Take your medicine now:</string>
    <string name="person_icon">Person icon</string>
    <string name="location_icon">Location icon</string>
    <string name="telephone_icon">Telephone icon</string>
    <string name="mail_icon">Mail icon</string>
    <string name="x_icon">x</string>
    <string name="double_pause_icon">--</string>
    <string name="no_data">Non data has been added</string>
    <string name="blood_tests">Blood tests (morphology, ESR, glucose, cholesterol (lipid profile), uric acid, creatinine)</string>
    <string name="thyroid_test">Thyroid test</string>
    <string name="urine_test">Urine test</string>
    <string name="fecal_blood_test">Fecal occult blood test (FOBT)</string>
    <string name="pelvic_and_pap">Pelvic exam and pap smear</string>
    <string name="transvaginal_ultrasound">Transvaginal ultrasound</string>
    <string name="breast_ultrasound">Breast ultrasound</string>
    <string name="mammogram">Mammogram</string>
    <string name="chest_Xray">Chest X-ray</string>
    <string name="spirometry">Spirometry</string>
    <string name="ekg">Electrocardiogram (EKG)</string>
    <string name="doppler_ultrasound">Doppler ultrasound</string>
    <string name="blood_pressure_test">Blood pressure test</string>
    <string name="abdominal_ultrasound">Abdominal ultrasound</string>
    <string name="gastroscopy">Gastroscopy</string>
    <string name="colonoscopy">Colonoscopy</string>
    <string name="bone_density_test">Bone density test</string>
    <string name="dental_exam">Dental exam</string>
    <string name="eye_exam">Eye exam and vision screening (fundus examination, intraocular pressure check)</string>
    <string name="hearing_test">Hearing test (audiogram)</string>
    <string name="skin_check">Skin cancer screening</string>
    <string name="medication_1">Medication 1</string>
    <string name="medication_2">Medication 2</string>
    <string name="medication_3">Medication 3</string>
    <string name="allergen">Some allergen</string>
    <string name="redness">redness</string>
    <string name="appointment_welcome">Keep track of your upcoming\nmedical appointments.\nStart by adding your first one with \"+\".</string>
    <string name="once_in_three_months">Once in 3 months</string>
    <string name="once_in_six_months">Once in 6 months</string>
    <string name="once_a_year">Once a year</string>
    <string name="once_in_two_years">Once in 2 years</string>
    <string name="once_in_three_years">Once in 3 years</string>
    <string name="once_in_four_years">Once in 4 years</string>
    <string name="once_in_five_years">Once in 5 years</string>
    <string name="profile_suggestions">Suggestions based on your profile</string>
    <string name="open_contacts">Open contacts</string>
    <string name="contacts_denied">Contacts denied</string>
</resources>