<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@color/electric">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/welcome_header"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/about_yourself"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:text="@string/date_of_birth"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/date_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="DD-MM-YYYY"
            android:textStyle="bold"
            android:background="@drawable/button_accent_style"
            android:onClick="setDateOfBirth"/>

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <RadioButton
            android:id="@+id/radio_normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="I\'m normal"
            android:textSize="16sp"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radio_pregnant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pregnant"
            android:textSize="16sp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radio_menopause"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/menopause"
            android:textSize="16sp"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/want_password"
        android:textSize="14sp"
        android:textStyle="italic"
        android:maxLines="2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

</LinearLayout>