<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/date_of_birth"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date_set_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/border_style_blue"
            android:onClick="showDatePickerDialog"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/profile_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <RadioButton
            android:id="@+id/profile_radio_pregnant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pregnant"
            android:textSize="16sp"/>

        <RadioButton android:id="@+id/profile_radio_menopause"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/menopause"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/profile_radio_normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/normal"
            android:textSize="16sp"
            android:checked="true"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:background="@drawable/border_style_blue"/>

        <TextView
            android:id="@+id/repeat_password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/repeat_password"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/repeat_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:background="@drawable/border_style_blue"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_accent_style"
            android:text="@string/record"
            android:textStyle="bold"
            android:onClick="onRecordProfileButtonClicked"/>
    </LinearLayout>
</LinearLayout>