<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/allergy_to"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/allergen_editText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:textSize="16sp"
            android:inputType="textMultiLine"
            android:maxLength="40"
            android:maxLines="2"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/allergies_effects"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/effects_editText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:hint="@string/allergies_effects"
            android:textSize="16sp"
            android:inputType="textMultiLine"
            android:maxLength="50"
            android:maxLines="2"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_yellow_style"
        android:elevation="2dp"
        android:text="@string/record"
        android:onClick="onRecordAllergenButtonClicked"/>
</LinearLayout>