<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:id="@+id/weights_listView_item">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bmi_record_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingTop="8dp"
            android:text="@string/bmi"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/category_record_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:paddingTop="8dp"
            android:text="@string/details"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weight_and_height_record_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/details"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/weight_date_record_textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/date"
            android:textSize="16sp"
            android:textColor="@color/fuchsia"/>
    </LinearLayout>
</LinearLayout>