<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/last_period"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/period_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_style_fuchsia"
                android:gravity="center_horizontal"
                android:onClick="showDatePickerDialog"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/duration_textView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/duration"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/duration_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/record_period_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:layout_marginTop="8dp"
                    android:text="@string/record"
                    android:textStyle="bold"
                    android:background="@drawable/button_violet"
                    android:onClick="onRecordPeriodButtonClicked"/>

                <ImageButton
                    android:id="@+id/period_records_button"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:paddingTop="6dp"
                    android:paddingLeft="6dp"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"
                    android:layout_gravity="bottom"
                    android:src="@drawable/data"
                    android:onClick="showPeriodRecords"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/next_period"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/expected_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/expected_date"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/expeced_date_data"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/double_pause_icon"
                    android:textSize="16sp"
                    android:textColor="@color/fuchsia"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/days_to_go"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/days_to_go"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/days_to_go_data"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/double_pause_icon"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>